added medecin dashboard
- patient search
- reservation validation

Signed-off-by: Anh-Kagi <anh.kagi@protonmail.com>